[package]
name = "nuko"
version = "0.1.0"
authors = ["Mats A. <mats@mats.sh>"]
edition = "2018"
description = "Future static site generator"
license = "MIT"

[dependencies]
# Project crates
config = { package = "nuko-config", path = "./crates/config" }
# Crates
atty = "0.2"
anyhow = "1.0"
clap = "2.33"
lazy_static = "1.4"
thiserror = "1.0"

[[bin]]
name = "nuko"

[workspace]
members = [
    "crates/config",
    "crates/org-parser"
]
