[package]
name = "nuko"
version = "0.1.0"
authors = ["Mats A. <mats@mats.sh>"]
edition = "2018"
description = "Future static site generator"
license = "MIT"

[dependencies]
# Project crates
nuko-core = { path = "./crates/core" }
# Crates
atty = "0.2"
anyhow = "1.0"
bus_queue = "0.5"
clap = "2.33"
futures = "0.3"
hyper = { version = "0.14", features = [ "http1", "server", "runtime" ] }
hyper-websocket-lite = "0.5"
lazy_static = "1.4"
mime = "0.3"
new_mime_guess = "2.1"
notify = "4.0"
thiserror = "1.0"
tokio = { version = "1.8", features = ["full"] }
websocket-codec = "0.5"

[[bin]]
name = "nuko"

[workspace]
members = [
    "crates/core"
]
