[package]
name = "nuko-core"
version = "0.1.0"
authors = ["Mats A. <mats@mats.sh>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
fs_extra = "1.1.0"
glob = "0.3.0"
nuko-org-parser = { path = "../org-parser" }
toml = "0.5"
sass-rs = "0.2.2"
serde = "1"
serde_derive = "1"
tera = "1.5"
thiserror = "1.0"
