[package]
name = "nuko-core"
version = "0.1.0"
authors = ["Mats A. <mats@mats.sh>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
fs_extra = "1.2.0"
glob = "0.3.0"
katex = "0.3.1"
lazy_static = "1.4"
orgize = "0.8.4"
toml = "0.5.7"
sass-rs = "0.2.2"
serde = "1"
serde_derive = "1"
sha2 = "0.9"
syntect = "4.4.0"
tera = "1.5"
thiserror = "1.0"
